# jcp-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  dist-workspace.toml
.github/workflows/: ci.yml  homebrew.yml  release.yml
examples/: auth.rs  initialize.json  keychain.rs  openid_auth.rs
src/: auth.rs  auth_success.html  keychain.rs  lib.rs  main.rs
tests/: e2e.rs  harness.rs  integration.rs
tests/harness/: mod.rs
