[package]
name = "acp-jcp"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9.3"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"

[dev-dependencies]
tokio-test = "0.4"
