[package]
name = "acp-jcp"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9.3"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
oauth2 = { version = "5", features = ["reqwest-blocking"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
open = "5"
url = "2"
tiny_http = "0.12"
jwt = "0.16.0"
thiserror = "2"
security-framework = "3"

[dev-dependencies]
drop-check = { git = "https://github.com/bazhenov/drop-check" }
tokio-test = "0.4"
tokio-stream = "0.1"
