[package]
name = "jcp"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/bazhenov/jcp-cli"
homepage = "https://github.com/bazhenov/jcp-cli"
description = "JetBrains Cloud Platform CLI"
default-run = "jcp"

[package.metadata.wix]
upgrade-guid = "25216205-50F1-45BF-A3A9-0EA2B86E51C8"
path-guid = "11FD36E7-42D4-4360-9EC3-DBF35408FBC7"
license = false
eula = false

[dependencies]
agent-client-protocol = "0.9.3"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
oauth2 = { version = "5", features = ["reqwest-blocking"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
open = "5"
url = "2"
tiny_http = "0.12"
jwt = "0.16.0"
thiserror = "2"
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libsecret = "0.8.0"
gio = "0.21.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Security_Credentials"] }

[dev-dependencies]
drop-check = { git = "https://github.com/bazhenov/drop-check" }
tokio-test = "0.4"
tokio-stream = "0.1"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
